--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aetienne-ember",
+  "name": "aetienne.comEmber",
   "version": "0.0.0",
   "private": true,
   "description": "Small description for aetienne-ember goes here",
